# rust-torn-client

./: .gitattributes  .gitignore  Cargo.toml  GENERATED_POLICY.md  LICENSE  README.md  TESTING.md
.github/workflows/: regen_check.yml  tests.yml
crates/torn_client/: Cargo.toml
crates/torn_client/src/: client.rs  config.rs  error.rs  http.rs  key_pool.rs  lib.rs  pagination.rs  rate_limit.rs
crates/torn_client/src/endpoints/: faction.rs  forum.rs  key.rs  market.rs  mod.rs  property.rs  racing.rs  torn.rs  user.rs
crates/torn_client/tests/: integration.rs  test_faction.rs  test_key.rs  test_market.rs  test_pagination.rs  test_property.rs  test_rate_limit.rs  test_torn.rs  test_user.rs
crates/torn_client/tests/common/: mod.rs
crates/torn_models/: Cargo.toml
crates/torn_models/src/: lib.rs
examples/: basic.rs  error_handling.rs  faction.rs  market.rs  multi_key.rs  pagination.rs
openapi/: latest.json  pagination_map.json  schema_map.json  spec_map.json
scripts/: fetch_spec.py  generate_models.py  interpret_spec.py  regen.py  test_interpret_spec.py
